# ai-truck

SmartAssist/: Comparison.md  GUIDE.md  INSTALLATION.md  MIGRATION_GUIDE.md  Makefile  README.md  SYSTEM_DEPENDENCIES.md  flowchart.md  install_services.sh  pyproject.toml  readme  requirements.txt  setup.py  version_strategy.md
SmartAssist/.github/workflows/: ci.yml  release.yml
SmartAssist/docs/deployments/: SERVICE_STARTUP.md
SmartAssist/docs/flowcharts/: NEW_PIPELINE_FLOW.md  NEW_vs_LEGACY.md
SmartAssist/models/: README.md
SmartAssist/models/csi/: READMEmd
SmartAssist/models/csi/config/: csi_config.yaml
SmartAssist/models/csi/deepstream_configs/: garbage_config.txt  road_config.txt
SmartAssist/models/csi/src/: bins.py  probes.py
SmartAssist/models/nozzlenet/: README.md
SmartAssist/models/nozzlenet/config/: nozzlenet_config.yaml
SmartAssist/models/nozzlenet/src/: __init__.py  bins.py  constants.py  probes.py  state_machine.py
SmartAssist/pipeline/: README.md
SmartAssist/pipeline/config/: logging_config.yaml  pipeline_config.yaml
SmartAssist/pipeline/deepstream_configs/: config_metamux.txt  config_preprocess.txt  infer_config.txt  tracker_config.yml
SmartAssist/pipeline/src/: main.py
SmartAssist/pipeline/src/camera/: __init__.py
SmartAssist/pipeline/src/pipeline/: bins.py
SmartAssist/pipeline/src/utils/: paths.py
SmartAssist/pipeline/systemd/: smartassist-pipeline.service
SmartAssist/services/: README.md
SmartAssist/services/can-init/: README.md  smartassist-can-deinit.service  smartassist-can-init.service
SmartAssist/services/can-init/scripts/: can-deinit.sh  can-init.sh
SmartAssist/services/can-server/: requirements.txt
SmartAssist/services/can-server/src/: __init__.py  main.py
SmartAssist/services/gpio-export/: README.md  smartassist-gpio-export.service
SmartAssist/services/gpio-monitor/: README.md  smartassist-gpio-monitor.service  smartassist-gpio-monitor.timer
SmartAssist/services/gpio-monitor/src/: monitor.sh
SmartAssist/services/health-monitor/: README.md  smartassist-health-monitor.service  smartassist-health-monitor.timer
SmartAssist/services/health-monitor/src/: check_services.sh
SmartAssist/services/time-sync/: README.md  requirements.txt  smartassist-time-sync.service  smartassist-time-sync.timer
SmartAssist/services/time-sync/src/: can_time_sync.py
SmartAssist/tools/: Readme  download_models.sh  initialize_cameras.py  set_serial_number.py  validate_installation.py
pipeline/: .gitignore  README.md  app_context.py  can_client.py  can_server.py  can_state_machine.py  deepstream_functions_sm.py  deepstream_parallel_infer_app.cpp  pipeline_w_logging.py  quickstart_tutorial_with_trt_loadable_models.ipynb  quickstart_tutorial_with_trt_loadable_models.py  service_stopper.py  utils.py
service_automation-master/: .gitignore  README.md  bucher-environment-for-service-daemons.conf  (+3 more)
(+67 files in other folders)
