# SmartAssist Modern Python Packaging Configuration
# For PEP 517/518 compliant builds

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smartassist"
version = "1.0.0"
description = "AI-powered garbage detection system for street sweepers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Your Company", email = "dev@company.com"}
]
maintainers = [
    {name = "Your Company", email = "dev@company.com"}
]
keywords = ["ai", "computer-vision", "deepstream", "garbage-detection", "jetson"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "PyYAML>=6.0",
    "pandas>=1.3.0",
    "python-can>=4.0.0",
    "cantools>=38.0.0",
    "azure-storage-blob>=12.14.0",
    "python-dateutil>=2.8.0",
    "pytz>=2021.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/your-org/SmartAssist"
Documentation = "https://docs.smartassist.io"
Repository = "https://github.com/your-org/SmartAssist.git"
Changelog = "https://github.com/your-org/SmartAssist/blob/main/CHANGELOG.md"

[project.scripts]
smartassist-pipeline = "main:main"
smartassist-can-server = "services.can_server.main:main"

[tool.setuptools]
package-dir = {"" = "pipeline/src"}
packages = ["find:"]

[tool.setuptools.packages.find]
where = ["pipeline/src", "models/csi/src", "models/nozzlenet/src", "services/can-server/src"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=pipeline --cov=models --cov=services"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["pipeline", "models", "services"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]